--- a/styles.css
+++ b/styles.css
@@ -1,75 +1,58 @@
 body {
-    background: #eee;
+    background-image: url("background.png");
+    color:white;
 }
 
 header {
-    background: #333;
-    height: 100px;
+    height:200px;
 }
 
-.box1 {
-    width: 200px;
-    float: left;
-    /* border: 1px red; */
-    margin-left: 50px;
-    
-}
-
-.box2 {
-    
-    width: 400px;
-    float: right;
-    /* border: 1px red; */
-    margin-right: 50px;
-}
-
-.header-box {
-    background: #eee;
-    height: 50px;
+.button {
+    height:40px;
+    width: 230px;
+    background-color:rgb(0, 183, 255);
+    border: none;
+    border-radius:3px;
     margin-top: 25px;
+    font-size: 16px;
+    color: white;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+.DevMtn {
+    float:left;
+    height:50px;
+    margin-left:80px;
+    margin-top:15px;
+    display:inline-block;
 }
 
-
-main {
-    background: #eee;
+ul{
+    float:right;
+    margin-bottom:10px;
+    margin-right:78px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-section {
-    background: #333;
-    width: 75%;
-    border: 10px solid #333;
-    margin: 100px auto 0;
-}
-
-
-
-.section-box1 {
-    width: 80%;
-    height: 100px;
-}
-
-.section-box2 {
-    width: 60%;   
-    height: 100px;
-}
-
-.white-box{
-    background: #eee;
-    margin: 100px auto 0;
-}
-
-.section-box3 {
-    width: 70%;
-    margin: 0 auto 100px;
-}
-
-.pill {
-    width: 48%;
+ul li {
     display: inline-block;
-    border-radius: 55px;
-    height: 40px;
+    margin: 30px 11px;
+    font-size:16px;
+    padding-top:10px;
+}
+section {
+    margin-top: 240px;
+    text-align: center;
 }
 
-.right-box {
-    margin-left 5px;
+h2 {
+    font-size:65px;
+    font-weight: bold;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
 }
+h4 {
+    padding-top: 20px;
+    font-size: 25px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
